# Aurora

./: .gitignore  CMakeLists.txt  LICENSE  README.md  run_coverage.sh  run_tidy.sh  test.mini  test_simple.mini
docs/: API_REFERENCE.md  ARCHITECTURE.md  DEVELOPER_GUIDE.md  DIAGRAMS.md  EXAMPLES.md  MODULES.md  README.md  REQUIREMENTS.md  USER_GUIDE.md
docs/en/: API_REFERENCE.md  ARCHITECTURE.md  DEVELOPER_GUIDE.md  EXAMPLES.md  README.md  USER_GUIDE.md
docs/zh/: API_REFERENCE.md  ARCHITECTURE.md  DEVELOPER_GUIDE.md  EXAMPLES.md  README.md  USER_GUIDE.md
include/Aurora/ADT/: Allocator.h  BitVector.h  Graph.h  SmallVector.h  SparseSet.h
include/Aurora/Air/: BasicBlock.h  Builder.h  Constant.h  Function.h  Instruction.h  Module.h  Type.h
include/Aurora/CodeGen/: InstructionSelector.h  LiveInterval.h  MachineBasicBlock.h  MachineFunction.h  MachineInstr.h  PassManager.h  PrologueEpilogueInserter.h  RegisterAllocator.h  SelectionDAG.h
include/Aurora/CodeGen/ISel/: ISelContext.h  LoweringStrategy.h  X86LoweringStrategies.h  X86OpcodeMapper.h
include/Aurora/CodeGen/Passes/: PassFactories.h  PassPipeline.h
include/Aurora/MC/: AsmPrinter.h  MCStreamer.h  ObjectWriter.h  X86AsmPrinter.h
include/Aurora/MC/AArch64/: AArch64AsmPrinter.h
include/Aurora/MC/X86/: X86AsmPrinter.h  X86ObjectEncoder.h
lib/ADT/: Allocator.cpp  BitVector.cpp  CMakeLists.txt  Graph.cpp  SmallVector.cpp  SparseSet.cpp
lib/Air/: BasicBlock.cpp  Builder.cpp  CMakeLists.txt  Constant.cpp  Function.cpp  Instruction.cpp  Module.cpp  Type.cpp
lib/CodeGen/: CMakeLists.txt  InstructionSelector.cpp  LiveInterval.cpp  MachineBasicBlock.cpp  MachineFunction.cpp  MachineInstr.cpp  PassManager.cpp  PrologueEpilogueInserter.cpp  RegisterAllocator.cpp  SelectionDAG.cpp
lib/CodeGen/ISel/: ISelContext.cpp  LoweringStrategy.cpp  X86LoweringStrategies.cpp  X86OpcodeMapper.cpp
lib/CodeGen/MIR/: MachineFunction.cpp  MachineInstr.cpp  SelectionDAG.cpp
lib/CodeGen/Passes/: PassManager.cpp  PassPipeline.cpp
lib/CodeGen/RA/: LiveInterval.cpp
lib/MC/: AsmPrinter.cpp  CMakeLists.txt  MCStreamer.cpp  ObjectWriter.cpp  X86AsmPrinter.cpp  X86InstEncoder.cpp  X86ObjectEncoder.cpp
lib/MC/AArch64/: AArch64AsmPrinter.cpp
lib/MC/X86/: X86AsmPrinter.cpp  X86InstEncoder.cpp  X86ObjectEncoder.cpp
tests/: CMakeLists.txt
tests/ADT/: AllocatorTest.cpp  BitVectorTest.cpp  GraphTest.cpp  SmallVectorTest.cpp  SparseSetTest.cpp
tests/Air/: BasicBlockTest.cpp  BuilderTest.cpp  ConstantTest.cpp  FunctionTest.cpp  InstructionFactoryTest.cpp  InstructionTest.cpp  ModuleTest.cpp  ToStringCoverageTest.cpp  TypeCoverageTest.cpp  TypeTest.cpp
tests/Bench/: BenchADT.cpp  BenchISel.cpp  BenchRA.cpp
tests/CodeGen/: CoverageBoost2Test.cpp  FinalCoverageTest.cpp  FuncCoverTest.cpp  ISelCoverageTest.cpp  ISelPipeline2Test.cpp  ISelRefactorTest.cpp  InstructionSelectorTest.cpp  LiveIntervalTest.cpp  MachineInstrTest.cpp  PassManagerDeepCoverageTest.cpp  PassManagerTest.cpp  PipelineBoostTest.cpp  SelectionDAGFullTest.cpp  SelectionDAGTest.cpp
tests/MC/: AArch64AsmPrinterTest.cpp  AsmPrinterTest.cpp  CoverageBoostTest.cpp  IntegrationFullTest.cpp  IntegrationTest.cpp  ObjWriterFuncTest.cpp  ObjectWriterFullTest.cpp  ObjectWriterTest.cpp  X86ObjectEncoderTest.cpp
tests/MiniC/: AlignasTest.cpp  AlignofTest.cpp  CompoundLiteralTest.cpp  DesignatedInitializerTest.cpp  FeatureCoverageTest.cpp  GlobalTest.cpp  StructTest.cpp  UnionTest.cpp
tools/aurora-obj/: CMakeLists.txt  main.cpp
tools/aurorac/: CMakeLists.txt  main.cpp
tools/coverage/: llvm_coverage_gate.py
tools/minic/: AST.h  CMakeLists.txt  CodeGen.cpp  CodeGen.h  Lexer.cpp  Lexer.h  Parser.cpp  Parser.h  README.md  main.cpp
tools/minic/include/minic/: ASTUtils.h  CodeGen.h  Parser.h
tools/minic/include/minic/ast/: AST.h  ASTUtils.h  Decl.h  Expr.h  Function.h  Node.h  Stmt.h  Type.h
tools/minic/include/minic/codegen/: CodeGen.h
tools/minic/include/minic/lex/: Lexer.h  Token.h
tools/minic/include/minic/parse/: Parser.h
tools/minic/src/: ASTUtils.cpp  CodeGen.cpp  CodeGenAnalysis.cpp  CodeGenDecl.cpp  CodeGenExpr.cpp  CodeGenStmts.cpp  Lexer.cpp  Parser.cpp  ParserExpr.cpp  ParserStmts.cpp  ParserTypes.cpp  main.cpp
tools/minic/src/ast/: ASTUtils.cpp
tools/minic/src/codegen/: CodeGen.cpp  CodeGenAnalysis.cpp  CodeGenDecl.cpp  CodeGenExpr.cpp  CodeGenStmts.cpp
tools/minic/src/driver/: main.cpp
tools/minic/src/lex/: Lexer.cpp  Token.cpp
tools/minic/src/parse/: Parser.cpp  ParserExpr.cpp  ParserStmts.cpp  ParserTypes.cpp
